--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/paneer-tikka-masala.html">Paneer Tikka Masala</a>
   </body>
 </html>
