update: paneer-tikka-masala page
- Added image of the paneer tikka masala\n- Included a detailed description\n- Listed ingredients\n- Added step-by-step preparation instructions

--- a/recipes/paneer-tikka-masala.html
+++ b/recipes/paneer-tikka-masala.html
@@ -7,5 +7,47 @@
   </head>
   <body>
     <h1>Paneer Tikka Masala</h1>
+    <img src="../static/images/paneer-tikka-masala.jpg" alt="Paneer Tikka Masala image" width="396.9" height="302.4">
+    <h2>Description</h2>
+    <p>Welcome to the ultimate guide to making Paneer Tikka Masala,
+    a rich and flavorful vegetarian dish that's beloved in Indian cuisine. 
+    This recipe brings together marinated paneer cubes grilled to perfection and then simmered in a creamy, 
+    spiced tomato-based gravy. Whether you're new to Indian cooking or a seasoned home chef, 
+    this step-by-step recipe ensures you'll create a restaurant-quality meal at home.</p>
+    <p>The soft paneer absorbs the smoky flavors from the tandoor or grill,
+    while the masala is a perfect balance of tangy tomatoes, aromatic spices,
+    and a touch of creaminess. Ideal for serving with naan, rice, or roti,
+    this dish is perfect for a cozy family dinner or special occasion.</p>
+    <p>Explore the world of Indian spices and enjoy the bold, comforting flavors of this iconic dish.
+    Let’s get started on making your own mouth-watering Paneer Tikka Masala!</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1/4 cup butter</li>
+      <li>1 pound paneer, cut into 1/2-inche cubes</li>
+      <li>2 medium onions, finely chopped</li>
+      <li>1 medium green bell pepper, chopped</li>
+      <li>2 medium jalapeno peppers, chopped</li>
+      <li>1 tablespoon ground cashews</li>
+      <li>1 teaspoon garlic paste</li>
+      <li>1 teaspoon ginger paste</li>
+      <li>1 teaspoon cayenne pepper</li>
+      <li>1 teaspoon ground cumin</li>
+      <li>1 teaspoon ground coriander</li>
+      <li>1 teaspoon garam masala</li>
+      <li>1 (16 ounce) can tomato sauce</li>
+      <li>1 pint half-and-half</li>
+      <li>1 teaspoon salt, or to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Add butter in a skillet over medium heat.</li>
+      <li>Add paneer.</li>
+      <li>Cook and stir until golden, about 5 minutes.</li>
+      <li>Add onions, bell pepper, jalapeños, ground cashews, garlic paste,
+        ginger paste, cayenne pepper, cumin, coriander, and garam masala.</li>
+      <li>Cook and stir until well combined and fragrant, about 1 minute.</li>
+      <li>Mix tomato sauce, half-and-half, and salt into paneer mixture.</li>
+      <li>simmer until thickened, about 30 minutes</li>
+    </ol>
   </body>
 </html>
