update: add reference to the recipe pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/paneer-tikka-masala.html">Paneer Tikka Masala</a>
+    <ul>
+      <li><a href="./recipes/paneer-tikka-masala.html">Paneer Tikka Masala</a></li>
+      <li><a href="./recipes/kadhi-pakora.html">Kadhi Pakora</a></li>
+      <li><a href="./recipes/sarson-ka-saag.html">Sarson ka Saag</a></li>
+    </ul>
   </body>
 </html>
